@@ -10,7 +10,6 @@
 __author__ = """Gauthier BASTIEN <gauthier.bastien@imio.be>"""
 __docformat__ = 'plaintext'
 
-from DateTime import DateTime
 from Products.CMFCore.utils import getToolByName
 from imio.actionspanel.interfaces import IContentDeletable
 from imio.helpers.cache import cleanVocabularyCacheFor
@@ -19,7 +18,7 @@ from Products.PloneMeeting.config import READER_USECASES
 from Products.PloneMeeting.interfaces import IAnnexable
 from Products.PloneMeeting.utils import getLastEvent
 from Products.MeetingLiege.config import FINANCE_GROUP_IDS
-from Products.MeetingLiege.config import FINANCE_ADVICE_HISTORIZE_EVENT
+from Products.MeetingLiege.config import FINANCE_ADVICE_HISTORIZE_COMMENTS
 
 
 def _everyAdvicesAreGivenFor(item):
@@ -125,37 +124,11 @@ def onAdviceTransition(advice, event):
         advice.REQUEST.set('mayProposeToFinancialController', False)
 
     if newStateId == 'financial_advice_signed':
-        # save the entire advice content in the workflow_history
-        # warning, we will save this event before last saved event that is the 'advice signed'
-        # event or workflow state after sign is not set because it use workflow history...
-        # that is why we use "insert(-1, ...)" here under
-        membershipTool = getToolByName(advice, 'portal_membership')
-        member = membershipTool.getAuthenticatedMember()
-        wf_name = wfTool.getWorkflowsFor(advice)[0].getId()
-        workflow_history = list(advice.workflow_history[wf_name])
+        # historize given advice into a version
+        pr = getToolByName(advice, 'portal_repository')
+        pr.save(obj=advice, comment=FINANCE_ADVICE_HISTORIZE_COMMENTS)
 
-        # compute advice data to store
-        adviceStyle = cfg.getAdviceStyle()
-        advice_type_icon = "advice_%s_%s.png" % (adviceStyle, advice.advice_type)
-        translated_advice_type = item.getAdviceDataFor(item, advice.advice_group)['type_translated']
-        advice_comment = advice.advice_comment and advice.advice_comment.output or '<p>-</p>'
-        advice_observations = advice.advice_observations and advice.advice_observations.output or '<p>-</p>'
-        comments = """<p id='historize_signed_advice_content-advice_type'><img src='{0}' />&nbsp;{1}</p>
-<p id='historize_signed_advice_content-advice_comment'>Motivation :</p>
-{2}
-<p id='historize_signed_advice_content-advice_observations'>Observations :</p>
-{3}""".format(advice_type_icon,
-              translated_advice_type.encode('utf-8'),
-              advice_comment,
-              advice_observations)
-        wf_history_data = {'action': FINANCE_ADVICE_HISTORIZE_EVENT,
-                           'review_state': '',
-                           'comments': comments,
-                           'actor': member.getId(),
-                           'time': DateTime()}
-        workflow_history.insert(-1, wf_history_data, )
-        advice.workflow_history[wf_name] = tuple(workflow_history)
-        # final state of the wf, make sure advice is not more hidden during redaction
+        # final state of the wf, make sure advice is no more hidden during redaction
         advice.advice_hide_during_redaction = False
         # if item was still in state 'proposed_to_finance', it is automatically validated
         # and a specific message is added to the wf history regarding this
